--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -50,7 +50,7 @@ sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,
 sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
 sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE [permalink] LIKE 'wattpad'
+sql_orgs_summary = SELECT TOP 10 api_url, fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE [permalink] LIKE 'wattpad'
 
 sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
            ([permalink],[api_path],[web_path],[api_url],[name],[also_known_as],[short_description],[description],[profile_image_url],
@@ -59,7 +59,7 @@ sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
            [total_funding_usd],[number_of_investments],[homepage_url],[contact_email],[phone_number],[created_at],[updated_at],[org_uuid])
      VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-sql_orgs_summary_update = UPDATE [CRUNCHBASE].[OrganizationsSummary] SET data_fetched = 1 WHERE uuid = '{}'
+sql_orgs_summary_update = UPDATE [CRUNCHBASE].[OrganizationsSummary] SET fetched = 1 WHERE uuid = '{}'
 sql_orgs_detail_update = UPDATE [CRUNCHBASE].[Organization] SET data_fetched = 1 WHERE org_uuid = '{}'
 
 sql_acquired_insert = INSERT INTO [CRUNCHBASE].[Acquired_by] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
