Shared classes and objects updates and upgrades.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -8,11 +8,11 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 #File paths
 [box_file_path]
 path_bap = Box Sync/mnadew/IE/Data/ETL/BAP
-path_bap_source = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for QA
-path_bap_qa = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/QA
-path_bap_etl = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
-path_bap_combined = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Combined
-path_bap_company_matching = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Match
+path_bap_source = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q4/ETL
+path_bap_qa = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q4/ETL/00 QA
+path_bap_etl = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q4/ETL
+path_bap_combined = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q4/ETL/01 Combined
+path_bap_company_matching = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q4/Match
 
 path_cbinsights = Box Sync/WorkBench/CB_Insights/for ETL
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
