--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -103,3 +103,7 @@ select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_
 
 [paths]
 survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
+
+[secondary_etl]
+db_del_qids = 5002132769,5002132770,5002132771,5002132772,5002132773,5002132774,5002132775,5002132776,5002132777,5002132778,5002132779,50021327326,50021327326,50021327327,50021327283
+sg_del_qids = 74,75,76,77,78,79,69,70,71,72,73,325,326,327,283
