secondary etl, results to rics

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -4,6 +4,8 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 ;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 ;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
+devconn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
+rep_conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCReport;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -100,6 +102,7 @@ select_options = SELECT O.id FROM SURVEY.Question_Options O INNER JOIN SURVEY.Qu
 select_answers = SELECT A.id FROM SURVEY.Question_Answers A INNER JOIN SURVEY.Questions Q ON A.question_id = Q.id WHERE Q.survey_id = WHAT_SURVEY
 select_emails = SELECT E.id FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campaigns C ON E.campaign_id = C.id WHERE C.survey_id = WHAT_SURVEY
 select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_SURVEY
+insert_stat_rep = INSERT INTO MDCReport.Fact_Response_Status
 
 [paths]
 survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
@@ -107,3 +110,14 @@ survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response
 [secondary_etl]
 db_del_qids = 5002132769,5002132770,5002132771,5002132772,5002132773,5002132774,5002132775,5002132776,5002132777,5002132778,5002132779,50021327326,50021327326,50021327327,50021327283
 sg_del_qids = 74,75,76,77,78,79,69,70,71,72,73,325,326,327,283
+old_ans = SELECT A.*
+    FROM SURVEY.Question_Answers A, SURVEY.Questions Q
+    WHERE Q.ID = A.question_id
+      AND Q.survey_id = 50021327
+      AND A.question_id IN
+          (5002132769, 5002132770, 5002132771, 5002132772, 5002132773, 5002132774, 5002132775, 5002132776, 5002132777, 5002132778, 5002132779, 50021327326, 50021327326, 50021327327, 50021327283)
+del_old_ans = DELETE
+    FROM SURVEY.Question_Answers
+    WHERE question_id IN
+          (5002132769, 5002132770, 5002132771, 5002132772, 5002132773, 5002132774, 5002132775, 5002132776, 5002132777, 5002132778, 5002132779, 50021327325, 50021327326, 50021327327, 50021327283)
+
