--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -99,6 +99,8 @@ survey_results_by_ric = SELECT
   RA.Company_ID,
   RA.[RIC_Program],
   QA.AnswerID,
+  QA.page_pipe,
+  QA.page_pipe_value,
   QA.QuestionID,
   QA.Question,
   QA.shortname,
@@ -129,6 +131,8 @@ survey_results_by_ric = SELECT
      V.Resp_id,
      V.answer        Company_ID,
      A.id            AnswerID,
+     A.page_pipe,
+     A.page_pipe_value,
      Q.id            QuestionID,
      Q.title         Question,
      Q.shortname,
@@ -163,7 +167,7 @@ survey_results_by_ric = SELECT
                 FROM SURVEY.Questions Q INNER JOIN SURVEY.Question_Options O ON Q.id = O.question_id
                 WHERE Q.survey_id IN (50021327, 50021197)) OV
        ON Q.id = OV.qid AND A.answer = OV.[value] OR A.option_id = OV.oid
-   WHERE Q.[type] NOT IN ('LOGIC', 'HIDDEN', 'JAVASCRIPT') AND resp_id IS NOT NULL) QA ON RA.resp_id = QA.resp_id
+   WHERE Q.[type] NOT IN ('LOGIC', 'HIDDEN', 'JAVASCRIPT') AND resp_id IS NOT NULL) QA ON RA.resp_id = QA.resp_id AND (RA.RIC_Program = QA.page_pipe_value OR QA.page_pipe_value IS NULL)
     -- WHERE QA.[Cap/Rev/Emp] IS NOT NULL
     -- WHERE RA.Company_ID = 302666
     -- ORDER BY 5
