Shared coders updates and changes.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -13,8 +13,8 @@ sql_delete = DELETE {} WHERE {}
 
 
 [db_sql_batch]
-sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' AND SourceSystemID = {}
-sql_batch_insert = INSERT INTO CONFIG.ImportBATCH Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_batch_select = SELECT DISTINCT BatchID FROM MaRSDataCatalyst.Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' AND SourceSystemID = {}
+sql_batch_insert = INSERT INTO MaRSDataCatalyst.CONFIG.ImportBATCH Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_batch_single_insert = INSERT INTO {} Values {}
 sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {} AND DataSource = {}
 sql_batch_delete = DELETE FROM {} WHERE BatchID IN {}
