--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -174,3 +174,4 @@ survey_results_by_ric = SELECT
     ORDER BY 3, 2, 15, 7
 all_qsos = SELECT Q.id qid, Q.[type] q_type, O.id oid, O.title o_label, O.value o_value FROM SURVEY.Questions AS Q LEFT JOIN SURVEY.Question_Options AS O ON Q.id = O.question_id WHERE Q.survey_id IN (50021327, 50021197)
 select_ans_by_qids = SELECT A.* FROM SURVEY.Question_Answers A WHERE A.question_id IN ({})
+sel_ann_survey_res = SELECT * FROM MDCReport.BD.AnnualSurveyResult
