--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -5,7 +5,6 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 ;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
 devconn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
-rep_conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCReport;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -102,7 +101,9 @@ select_options = SELECT O.id FROM SURVEY.Question_Options O INNER JOIN SURVEY.Qu
 select_answers = SELECT A.id FROM SURVEY.Question_Answers A INNER JOIN SURVEY.Questions Q ON A.question_id = Q.id WHERE Q.survey_id = WHAT_SURVEY
 select_emails = SELECT E.id FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campaigns C ON E.campaign_id = C.id WHERE C.survey_id = WHAT_SURVEY
 select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_SURVEY
-insert_stat_rep = INSERT INTO MDCReport.Fact_Response_Status
+insert_stat_rep = INSERT INTO MDCReport.BD.ResponseStatus (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_stat_rep_f = INSERT INTO MDCReport.BD.ResponseStatus (WHAT_HEADERS) VALUES {}
+trunc_stat_rep = TRUNCATE TABLE MDCReport.BD.ResponseStatus
 
 [paths]
 survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
