--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -4,7 +4,7 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 ;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 ;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
-devconn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
+devconn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -107,6 +107,7 @@ trunc_stat_rep = TRUNCATE TABLE MDCReport.BD.ResponseStatus
 
 [paths]
 survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
+sandbox = Box Sync/gcree/Sandbox/
 
 [secondary_etl]
 db_del_qids = 5002132769,5002132770,5002132771,5002132772,5002132773,5002132774,5002132775,5002132776,5002132777,5002132778,5002132779,50021327326,50021327326,50021327327,50021327283
