--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -36,7 +36,7 @@ path_bap_validation_quarter_one = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/
 path_bap_validation_quarter_two = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q2/for ETL
 path_bap_validation_quarter_three = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
 
-path_statscan_failed_chunks = ~/Box Sync/gcree/StatsCanETL/Failed_chunks
+path_statscan_failed_chunks = Box Sync/Workbench/statsCAN/failed_chunks/
 
 
 # File types
